Optimize delete reports
Signed-off-by: achour94 <berrahmaachour@gmail.com>